--- a/app/views/course_maps/public/_xtmpl_qa.html.erb
+++ b/app/views/course_maps/public/_xtmpl_qa.html.erb
@@ -67,7 +67,7 @@
 {% }else{ %}
 	<tr>
 {% } %}
-		<td>Re</td>
+		<td class="text-center">Re</td>
 		<td>{%=o.sub_qa.user.name%}:</td>	
 		<td>{%=o.sub_qa.comments%}</td>
 		<td colspan="2">{%=parseDate(o.sub_qa.time)%}</td>
