--- a/app/views/admin/_manage_user_lists.html.erb
+++ b/app/views/admin/_manage_user_lists.html.erb
@@ -9,7 +9,7 @@
 	</td>
 	<% if !user.department.nil? %>
 	<td>
-		<%=user.department.ch_name%>
+		<%=user.department_ch_name%>
 	</td>
 	<% else %>
 		<td>尚未填寫</td>
@@ -21,15 +21,9 @@
 	<% cm_id=user.course_maps.first.nil? ? 0 :user.course_maps.first.id %>  
 		<%=select_tag "course_map", options_from_collection_for_select(@course_map, :id, :name, cm_id), prompt:"none", class:"course_map form-control", id:user.id%>
 	</td>
-<% unless user.semester.nil? %>
-<% sem=user.semester.name%>
-<td><%= sem[0..sem.length-2] %></td>
-<% else %> 
-<td>尚未填寫</td>
-<% end %>
-
-<td>
-<%=select_tag :role, options_for_select([[ "一般使用者",1 ], ["學校系辦單位",2 ], ["系統管理員", 0]], user.role), :class=>'form-control admin-user-role', :user_id=>user.id%>
-</td>
+	<td><%= user.year==0 ? user.year : '尚未填寫' %></td>
+	<td>
+		<%=select_tag :role, options_for_select(@role_sel, user.role), :class=>'form-control admin-user-role', :user_id=>user.id%>
+	</td>
 
 </tr>
