--- a/app/views/courses/simulation.html.erb
+++ b/app/views/courses/simulation.html.erb
@@ -120,7 +120,7 @@ $(document).ready(function(){
 				popover: true,
 				cancelButtonFunc: function(arg){
 					var course_id = arg.data.course_id;
-					//todo ajax
+					//TODO
 					$('#schedule_table').CourseTable('deleteCourse', course_id);
 				}
 			};
