import course&logger complete

--- a/app/views/courses/course_table/_xtmpl_course_table.html.erb
+++ b/app/views/courses/course_table/_xtmpl_course_table.html.erb
@@ -5,7 +5,7 @@
 	<div class="panel-heading" style="background-color:#4c66a4;">
 		<h4 class="text-center">
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{%=o.semester_name%}
-			<a href="/courses/timetable.xlsx?sem_id={%=o.semester_id%}" id="download-link" class="btn btn-success btn-circle pull-right" style="margin-top: -5px;">
+			<a href="/courses/export_timetable.xlsx?sem_id={%=o.semester_id%}" id="download-link" class="btn btn-success btn-circle pull-right" style="margin-top: -5px;">
 				<i class="fa fa-download"></i>
 			</a>
 		</h4>		
