--- a/app/views/user/_xtmpl_select_cf.html.erb
+++ b/app/views/user/_xtmpl_select_cf.html.erb
@@ -1,5 +1,5 @@
 <script type="text/x-tmpl" id="select_cf">
-{% var cm=o.course_map,user_courses=o.user_courses.success; %}
+{% var cm=o.course_map,user_courses=o.user_courses; %}
 {% var cfname=[]; %}
 <table class="table "style="border:0px">
 	{% var any_need_to_sel=false; %}
@@ -11,12 +11,12 @@
 		<tr class="row" >
 			<td class="col-md-12">
 				<h4 class="text-left">
-					{%=course.sem_id==0 ? "抵免" : get_sem_name(course.sem_id) %} | 
+					{%=course.sem_name %} | 
 					{%=course.name%} | 
 					<%= fa_icon "graduation-cap", class:"credit-count" %> <strong>{%=course.credit==0 ? "0" : course.credit%}</strong> | 
 					{%=course.score %}				
 					<div class="" style="width:250px;display:inline-block;">
-						<select id="{%=course.cs_id%}" class="form-control" onchange="select_cf({%=o.user_id%},$(this));">
+						<select id="{%=course.cs_id%}" class="form-control" onchange="select_cf({%=course.sem_name=="抵免"%},{%=o.user_id%},$(this));">
 						{% for(var j = 0,cf ;cf=cfs[j];j++){ %}
 							<option value="{%=cf.id%}" {%= cf.id==course.cf_id ? "selected":""%}>{%=cf.name%}</option>
 						{% } %}
@@ -25,8 +25,8 @@
 				</h4>
 			</td>
 		</tr>
-
 	{% } %}
+	
 	{% if(!any_need_to_sel){ %}
 	<tr class="row">
 		<td class="col-md-12 text-left">
@@ -38,7 +38,7 @@
 	{% } %}
 	<tr class="row">
 		<td class="col-md-12 text-right">
-				<a href="/user/special_list" class="btn btn-primary">確認</a>
+				<a href="/user/" class="btn btn-primary">確認</a>
 		</td>
 	</tr>
 </table>
