--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -24,7 +24,7 @@
 		<% end %>
 	});
 </script>
-<% if @user.course_simulations.count==0 %>
+<% if @user.normal_scores.count==0 %>
 <div class="jumbotron bs-callout bs-callout-info border-info" style="background-color:rgba(0,0,0,0);">
   <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
   <h2>開始使用...</h2>
@@ -41,7 +41,7 @@
 	<ul class="nav nav-tabs" style="/*margin-top:-15px;*/">
 		<li><a class="tab-link" id='toggle-a' href="#others" data-toggle="tab" url="/user/this_sem?uid=<%=params[:uid]%>" >本學期</a></li>
 		<li><a class="tab-link" id='toggle-b' href="#others" data-toggle="tab" url="/user/all_courses?uid=<%=params[:uid]%>">歷年課程</a></li>
-		<% if @user.course_simulations.count==0 %>
+		<% if @user.normal_scores.count==0 %>
 		<li><a class="tab-link" id='toggle-c' href="/user/import_course" onclick="toastr['info']('請先匯入成績!');">畢業學分計算</a></li>
 		<% else %>
 		<li><a class="tab-link" id='toggle-c' href="#others" data-toggle="tab" url="/user/statistics?uid=<%=params[:uid]%>">畢業學分計算</a></li>
