fix course table bug

--- a/app/views/courses/search/_xtmpl_results_mini.html.erb
+++ b/app/views/courses/search/_xtmpl_results_mini.html.erb
@@ -3,7 +3,9 @@
 
 	function addCourseSimulation(this_but, cd_id, time, addordel,from){
 		if(addordel=="add"){
-			if($('#schedule_table').CourseTable('checkConflictByTime',{time: time}))
+			//console.log(time);
+			var res = $('#schedule_table').CourseTable('checkConflictByTime',{time: time}) ;
+			if(res)
 				return ;
 		}else if(addordel=="delete"){
 			this_but.parent().parent().remove();
